ingress/konga_dashboard_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konga-dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: konga
                port:
                  number: 80
            pathType: Prefix
            path: /
      host: konga.k8s.lestoises.ch
