ingress/kube_dashboard_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubebernetes-dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - http:
        paths:
        - backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 443
          pathType: Prefix
          path: /
      host: kube-dash.k8s.lestoises.ch
