ingress/rabbitmq_cluster_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - http:
        paths:
        - backend:
            service:
              name: rabbitmq-toises
              port:
                number: 15672
          pathType: Prefix
          path: /	
      host: rabbitmq.k8s.lestoises.ch
