ingress/tekton_dashboard_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: tekton.k8s.lestoises.ch
      http:
        paths:
          - path: /
            backend:
              serviceName: tekton-dashboard
              servicePort: 9097
